<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Musica</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_mnt_sdcard_music_lo_noto_mp3">/mnt/sdcard/music/lo noto.mp3</string>
    <string name="unused">unused</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="activityBusqueda">Buscar</string>
    <string name="reproductor">Reproductor</string>
    <string name="chronometer">Chronometer</string>
    <string name="cerrar">Cerrar</string>
    <string name="volver_a_reproductor">Volver a Reproductor</string>
    <string name="buscar">Buscar</string>
    <string name="todo">TODO</string>

</resources>